Abou us social media

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                         </p>
                         <br>
                         <p>
-                            My skills span across multiple fields with proficiency in graphic design and Web development. Some of the brands i have has worked on include: Total, Unga Limited, Isuzu, Standard Charter, ICEA Lion Group, Pampers, Cadbury, Darling Kenya, Ariel and Kenchic just to name a few.                        </p>
+                            My skills span across multiple fields with proficiency in graphic design and Web development. Some of the brands i have worked on include: Total, Unga Limited, Isuzu, Standard Charter, ICEA Lion Group, Pampers, Cadbury, Darling Kenya, Ariel and Kenchic just to name a few.                        </p>
                         <p>
                         <!--  <img class="img-right" src="images/signature_image.png" alt="" /> -->
                         </p>
@@ -86,10 +86,6 @@
                             <br>
                         </p>
                         <br>
-                        <a class="socail-text" href="#">TW.</a>
-                        <a class="socail-text" href="#">FB.</a>
-                        <a class="socail-text" href="https://www.linkedin.com/in/moses-mativo-290559106/" target="_blank">IN.</a>
-                        <a class="socail-text" href="#">BE.</a>
                     </div>
 
                     <div class="page-split-right" data-background="images/moses.jpg">
