--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                                     </div>
                                 <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/cadbury.png" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
