--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#'class="img-thumb">
                                         <img src="images/kenchic.png" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -124,9 +124,9 @@
 
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/ant-africa.jpg" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -147,9 +147,9 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/MY-MEAL.jpg" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -170,9 +170,9 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/mfi.png" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -193,9 +193,9 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/village.png" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -216,9 +216,9 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/pampers.jpg" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -239,9 +239,9 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/vl.png" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -262,9 +262,9 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/Easter-4.jpg" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -285,9 +285,9 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/habour-capital.jpg" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -308,9 +308,9 @@
                             </div>
                              <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/scb.png" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -331,9 +331,9 @@
                             </div>                
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/icea.png" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -354,9 +354,9 @@
                             </div>
                              <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/ico.png" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -377,9 +377,9 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/recent-home-purchase.jpg" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
@@ -400,9 +400,9 @@
                             </div>
                               <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <div class="img-thumb">
+                                    <a href='#' class="img-thumb">
                                         <img src="images/landscape1.png" alt="" >
-                                    </div>
+                                    </a>
                                     <div class="carousel-item-info">
                                         <div class="carousel-cat-links">
                                             <ul>
