--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                     </div>
 
                     <div class="page-split-right" data-background="images/moses.jpg">
-                        <img class="split-image" src="images/mosess.jpg" alt="" />
+                        <img class="split-image" src="images/mosess.JPG" alt="" />
                     </div>
 
                 </div>
