--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                         <br>
                     </div>
 
-                    <div class="page-split-right" data-background="images/moses.jpg">
+                    <div class="page-split-right" data-background="images/mosess.jpg">
                         <img class="split-image" src="images/mosess.JPG" alt="" />
                     </div>
 
