--- a/about.html
+++ b/about.html
@@ -70,13 +70,13 @@
                             Mativo
                         </h1>
                         <p>
-                            I am a highly experienced creative web developer and graphic designer with an addiction to usability, mobile, user experience and graphic design. I care about details as well as on the big picture and try and create something exceptional.I level-head and take a rational approach to problem solving, combined with a passion for innovative and fresh ideas.
+                            I am a highly experienced creative web developer and graphic designer with an addiction to usability, mobile, user experience and graphic design.I level-head and take a rational approach to problem solving, combined with a passion for innovative and fresh ideas.
                         </p>
-                        <p>I am able to work effectively in a team or on my Own. I have demonstrated ana bility to lead small Teams and mentor other workers. I pride myself on being able to use my knowledge and initiative to  deliver high quality results to tight deadlines. I enjoy a challenge and look for the opportunity to expand and develop my skill set. 
+                        <p>I am able to work effectively in a team or on my Own.I pride myself on being able to use my knowledge and initiative to  deliver high quality results to tight deadlines. I enjoy a challenge and look for the opportunity to expand and develop my skill set. 
                         </p>
                         <br>
                         <p>
-                           My skills span across multiple fields with proficiency in graphic design and Web development. Some of the brands i have has worked on include: Total, Unga Limited, Isuzu, Standard Charter, ICEA Lion Group, Pampers, Cadbury, Darling Kenya, Ariel and Kenchic just to name a few.                        </p>
+                           My skills span across multiple fields with proficiency in graphic design and Web development. </p>
                         <p>
                         <!--  <img class="img-right" src="images/signature_image.png" alt="" /> -->
                         </p>
@@ -85,7 +85,7 @@
                             <p><span>MSK AWARD 2018</span><br>
                               CADBURY DAIRY MILK FLAVOURISM CAMPAIGN
                             </p>
-                        
+
                         <p class="my-info">
                             <span>Email Adress:</span> mosesmativo24@gmail.com
                             <br>
