--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                     </div>
                                 <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='#' class="img-thumb">
+                                    <a href='https://cadbury.co.ke' class="img-thumb">
                                         <img src="images/cadbury.png" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
