--- a/about.html
+++ b/about.html
@@ -82,10 +82,10 @@
                         <div class="awwards">
                             <h2>HONORS & AWARDS</h2>
                             <p><span>MSK AWARD 2018</span><br>
-                              <a href="cadbury.co.ke" target="_blank"> CADBURY DAIRY MILK FLAVOURISM CAMPAIGN</a>
+                              <a href="www.cadbury.co.ke" target="_blank"> CADBURY DAIRY MILK FLAVOURISM CAMPAIGN</a>
                             </p>
                               <p><span>APA AWARD 2018</span><br>
-                             <a href="backyourfuture.com" target="_blank"> ICEA LION GROUP BACK YOUR FUTURE
+                             <a href="www.backyourfuture.com" target="_blank"> ICEA LION GROUP BACK YOUR FUTURE
                             </p>
                             <br>
                         <p class="my-info">
