--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='#'class="img-thumb">
+                                    <a href="https://kenchic.com" class="img-thumb">
                                         <img src="images/kenchic.png" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
@@ -124,7 +124,7 @@
 
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='#' class="img-thumb">
+                                    <a href="http://antafrica.com"  class="img-thumb">
                                         <img src="images/ant-africa.jpg" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
