--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                     </div>
                                 <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='https://cadbury.co.ke' class="img-thumb">
+                                    <a href='https://cadbury.co.ke' target="_blank" class="img-thumb">
                                         <img src="images/cadbury.png" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
@@ -147,7 +147,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='#' class="img-thumb">
+                                    <a href="https://www.backyourfuture.com/my-meal" class="img-thumb">
                                         <img src="images/MY-MEAL.jpg" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
@@ -170,7 +170,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='#' class="img-thumb">
+                                    <a href="http://groupmfi.com" class="img-thumb">
                                         <img src="images/mfi.png" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
@@ -193,7 +193,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='#' class="img-thumb">
+                                    <a href='"http://villagemarket-kenya.com" class="img-thumb">
                                         <img src="images/village.png" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
@@ -239,7 +239,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='#' class="img-thumb">
+                                    <a href="http://vlafrica.com" class="img-thumb">
                                         <img src="images/vl.png" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
@@ -285,7 +285,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='#' class="img-thumb">
+                                    <a href="portfolio-3.html" class="img-thumb">
                                         <img src="images/habour-capital.jpg" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
@@ -308,7 +308,7 @@
                             </div>
                              <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='#' class="img-thumb">
+                                    <a href="http://womenintech.co.ke" class="img-thumb">
                                         <img src="images/scb.png" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
@@ -331,7 +331,7 @@
                             </div>                
                             <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='#' class="img-thumb">
+                                    <a href='"https://www.backyourfuture.com" class="img-thumb">
                                         <img src="images/icea.png" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
@@ -354,7 +354,7 @@
                             </div>
                              <div class="swiper-slide">
                                 <div class="carousel-item-image">
-                                    <a href='#' class="img-thumb">
+                                    <a href="http://icopower-esco.com" class="img-thumb">
                                         <img src="images/ico.png" alt="" >
                                     </a>
                                     <div class="carousel-item-info">
