--- a/about.html
+++ b/about.html
@@ -82,10 +82,10 @@
                         <div class="awwards">
                             <h2>HONORS & AWARDS</h2>
                             <p><span>MSK AWARD 2018</span><br>
-                              <a href="www.cadbury.co.ke" target="_blank"> CADBURY DAIRY MILK FLAVOURISM CAMPAIGN</a>
+                              <a href="https://www.cadbury.co.ke/martians/" target="_blank"> CADBURY DAIRY MILK FLAVOURISM CAMPAIGN</a>
                             </p>
                               <p><span>APA AWARD 2018</span><br>
-                             <a href="www.backyourfuture.com" target="_blank"> ICEA LION GROUP BACK YOUR FUTURE
+                             <a href="https://www.backyourfuture.com/home" target="_blank"> ICEA LION GROUP BACK YOUR FUTURE
                             </p>
                             <br>
                         <p class="my-info">
@@ -97,8 +97,8 @@
                         <br>
                     </div>
 
-                    <div class="page-split-right" data-background="images/mosess.jpg">
-                        <img class="split-image" src="images/mosess.JPG" alt="" />
+                    <div class="page-split-right" data-background="images/tivo2.jpg">
+                        <img class="split-image" src="images/tivo2.jpg" alt="" />
                     </div>
 
                 </div>
