--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <div class="carousel-item-info">
                 <div class="carousel-cat-links">
                   <ul>
-                    <li class="portfolio-category"> <a href="http://insideafricacargo.com" target="_blank">Website</a> </li>
+                    <li class="portfolio-category"> <a href="http://ahb.co.ke/healthinnovationplatform/" target="_blank">Website</a> </li>
                   </ul>
                 </div>
                 <h2> <a href="https://cadbury.co.ke" target="_blank">Health Innovator Platform</a> </h2>
