--- a/about.html
+++ b/about.html
@@ -85,13 +85,13 @@
                               <a href="https://www.cadbury.co.ke/martians/" target="_blank"> CADBURY DAIRY MILK FLAVOURISM CAMPAIGN</a>
                             </p>
                               <p><span>APA AWARD 2018</span><br>
-                             <a href="https://www.backyourfuture.com/home" target="_blank"> ICEA LION GROUP BACK YOUR FUTURE
+                             <a href="https://www.backyourfuture.com/home" target="_blank"> ICEA LION GROUP BACK YOUR FUTURE</a>
                             </p>
                             <br>
                         <p class="my-info">
-                            <span>Email Adress:</span> mosesmativo24@gmail.com
+                            <span>Email Adress:</span> <a href="mailto:mosesmativo24@gmail.com">mosesmativo24@gmail.com</a>
                             <br>
-                            <span>Phone:</span> +254 702 660-551
+							<span>Phone:</span> <a href="tel:+254 702 660-551">+254 702 660-551</a>
                             <br>
                         </p>
                         <br>
