--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="swiper-wrapper image-slider slider">
         <div class="swiper-slide text-slide">
           <div class="carousel-item-text">
-            <p class="title-description-up">UX | UI Developer</p>
+            <p class="title-description-up">UX | UI Front-End Developer</p>
             <h1 class="entry-title big-text">Digital Artist</h1>
             <div class="carousel-content"> I am a highly experienced creative web developer and graphic designer with an addiction to usability, mobile, user experience and graphic design. </div>
           </div>
