--- a/about.html
+++ b/about.html
@@ -97,8 +97,8 @@
                         <br>
                     </div>
 
-                    <div class="page-split-right" data-background="images/tivo2.jpg">
-                        <img class="split-image" src="images/tivo2.jpg" alt="" />
+                    <div class="page-split-right">
+                        <img class="split-image" src="images/chief.gif" alt="" style="display: block;"/>
                     </div>
 
                 </div>
