--- a/questionare.html
+++ b/questionare.html
@@ -59,7 +59,7 @@
             <div class="row justify-content-center">
               <div class="col-xl-8 col-lg-8 col-sm-8">
                 <div class="ufg-job-application-wrapper pt-0">
-                  <form action="uploads.html" class="job-application-form">
+                  <form action="documents.html" class="job-application-form">
                     <div class="input-type-block radio-field">
                       <h4>1. Are you involved in any political activity? <span class="required">*</span></h4>
                       <div class="form-group">
