--- a/documents.html
+++ b/documents.html
@@ -60,7 +60,7 @@
             <div class="row">
               <div class="col-lg-6 offset-lg-3">
                 <div class="ugf-form">
-                  <form action="kyc-complete.html">
+                  <form action="dashboard/html/lms/approved-review.html">
                     <div class="input-block">
                       <h4>Review Information</h4>
                       <div class="input-block">
