--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <div class="swiper-wrapper image-slider slider">
         <div class="swiper-slide text-slide">
           <div class="carousel-item-text">
-            <p class="title-description-up">UX | UI Front-End Developer</p>
-            <h1 class="entry-title big-text">Digital Artist</h1>
+            <p class="title-description-up">UX | UI</p>
+            <h1 class="entry-title big-text">Front-End Developer</h1>
             <div class="carousel-content"> I am a Front-end developer with experience in designing and building responsive web design using the latest technologies with an addiction to usability and user experience. </div>
           </div>
           <div class="swiper-slide">
