--- a/about.html
+++ b/about.html
@@ -70,14 +70,7 @@
                             Mativo
                         </h1>
                         <p>
-                            I am a highly experienced creative web developer and graphic designer with an addiction to usability, mobile, user experience and graphic design.I level-head and take a rational approach to problem solving, combined with a passion for innovative and fresh ideas.
-                        </p>
-                        <p>I am able to work effectively in a team or on my Own.I pride myself on being able to use my knowledge and initiative to  deliver high quality results to tight deadlines. I enjoy a challenge and look for the opportunity to expand and develop my skill set. 
-                        </p>
-                        <p>
-                           My skills span across multiple fields with proficiency in graphic design and Web development. </p>
-                        <p>
-                        <!--  <img class="img-right" src="images/signature_image.png" alt="" /> -->
+                           Front-end developer with 5+ years of experience designing, building and maintaining responsive web design. Proven ability to lead and manage teams of developers, deliver high-quality work on tight deadlines, and stay up to date on the latest industry trends. Passionate about creating beautiful and user-friendly experiences.
                         </p>
                         <div class="awwards">
                             <h2>HONORS & AWARDS</h2>
